--- a/index.html
+++ b/index.html
@@ -63,13 +63,13 @@
 
     <section class="resume-section p-3 p-lg-5 d-flex align-items-center" id="about">
       <div class="w-100">
-        <h1 class="mb-0">Clarence
-          <span class="text-primary">Taylor</span>
+        <h1 class="mb-0">陳
+          <span class="text-primary">奕碩</span>
         </h1>
         <div class="subheading mb-5">新北市新莊區
           <a href="mailto:yishuo1116@email.com">yishuo1116@gmail.com</a>
         </div>
-        <p class="lead mb-5">I am experienced in leveraging agile frameworks to provide a robust synopsis for high level overviews. Iterative approaches to corporate strategy foster collaborative thinking to further the overall value proposition.</p>
+        <p class="lead mb-5">興趣使然的資傳系學生</p>
         <div class="social-icons">
           <a href="#">
             <i class="fab fa-linkedin-in"></i>
