--- a/index.html
+++ b/index.html
@@ -63,13 +63,16 @@
 
     <section class="resume-section p-3 p-lg-5 d-flex align-items-center" id="about">
       <div class="w-100">
-        <h1 class="mb-0">陳
-          <span class="text-primary">奕碩</span>
+        <h1 class="mb-0">陳奕碩
+          <p>
+          <span class="text-primary">CHEN-YI-SHUO</span>
+          </p>
         </h1>
         <div class="subheading mb-5">新北市新莊區
           <a href="mailto:yishuo1116@email.com">yishuo1116@gmail.com</a>
         </div>
-        <p class="lead mb-5">興趣使然的資傳系學生</p>
+        <p class="lead mb-5">興趣使然的資傳系學生，下課時也仍然努力追求自己的夢想，對生活充滿動力的青春少年</p>
+        <p class="lead mb-5">Interested students, who are still motivated by their enthusiasm, are still striving to pursue their dreams in the course of class.-translation</p>
         <div class="social-icons">
           <a href="#">
             <i class="fab fa-linkedin-in"></i>
