--- a/index.html
+++ b/index.html
@@ -20,6 +20,10 @@
 
   <!-- Custom styles for this template -->
   <link href="css/resume.min.css" rel="stylesheet">
+  
+  <link href="https://fonts.googleapis.com/css?family=Noto+Sans+TC" rel="stylesheet">
+  
+  <link href="css/MYresume.min.css" rel="stylesheet">
 
 </head>
 
