--- a/index.html
+++ b/index.html
@@ -242,7 +242,303 @@
         </ul>
       </div>
     </section>
+	
+    <hr class="m-0">
 
+    <section class="resume-section p-3 p-lg-5 d-flex align-items-center" id="publications">
+      <div class="w-100">
+        <h2 class="mb-5"><span class="text-primary">著作</span>Publications</h2>
+		<div id="accordion">
+		  <div class="card">
+		    <div class="card-header">
+			  <a class="card-link" data-toggle="collapse" href="#collapseOne">
+				2011年~
+			  </a>
+			</div>
+			<div id="collapseOne" class="collapse show" data-parent="#accordion">
+			  <div class="card-body">
+				<table class="table table-hover">
+				  <thead>
+					<tr>
+					  <th>出版年</th>
+					  <th>作者</th>
+					  <th>論文名稱</th>
+					  <th>期刊</th>
+					  <th>卷期</th>
+					  <th>頁碼</th>
+					</tr>
+				  </thead>
+				  <tbody>
+					<tr>
+					  <td>2017</td>
+					  <td>林頌堅</td>
+					  <td>以開放資料的教師學術專長彙整表為基礎之學科標準分類分析</td>
+					  <td>教育資料與圖書館學</td>
+					  <td>第五十四卷第一期</td>
+					  <td>69~95</td>
+					</tr>
+					<tr>
+					  <td>2015</td>
+					  <td>林頌堅</td>
+					  <td>利用文字內容主題特徵與機器學習方法探討MIS相關期刊在ISI資料庫上的主題分類</td>
+					  <td>教育資料與圖書館學</td>
+					  <td>第五十二卷第三期</td>
+					  <td>269~298</td>
+					</tr>
+					<tr>
+					  <td>2014</td>
+					  <td>林頌堅</td>
+					  <td>資訊科學期刊的主題分布與多樣性研究</td>
+					  <td>圖書資訊學研究</td>
+					  <td>第九卷第一期</td>
+					  <td>171~200</td>
+					</tr>
+					<tr>
+					  <td>2014</td>
+					  <td>林頌堅</td>
+					  <td>以主題模型方法為基礎的資訊計量學領域研究主題分析</td>
+					  <td>教育資料與圖書館學</td>
+					  <td>第五十一卷第四期</td>
+					  <td>499~523</td>
+					</tr>
+					<tr>
+					  <td>2013</td>
+					  <td>林頌堅</td>
+					  <td>利用網路結構分析的研究主題視覺化</td>
+					  <td>教育資料與圖書館學</td>
+					  <td>第五十卷第四期</td>
+					  <td>565~596</td>
+					</tr>
+					<tr>
+					  <td>2012</td>
+					  <td>林頌堅</td>
+					  <td>資訊傳播學領域的研究主題發展分析</td>
+					  <td>資訊傳播研究</td>
+					  <td>第二卷第二期</td>
+					  <td>1~20</td>
+					</tr>
+				  </tbody>
+				</table>
+			  </div>
+			</div>
+		  </div>
+
+		  <div class="card">
+			<div class="card-header">
+			  <a class="collapsed card-link" data-toggle="collapse" href="#collapseTwo">
+				2001年~2010年
+			  </a>
+			</div>
+			<div id="collapseTwo" class="collapse" data-parent="#accordion">
+			  <div class="card-body">
+				<table class="table table-hover">
+				  <thead>
+					<tr>
+					  <th>出版年</th>
+					  <th>作者</th>
+					  <th>論文名稱</th>
+					  <th>期刊</th>
+					  <th>卷期</th>
+					  <th>頁碼</th>
+					</tr>
+				  </thead>
+				  <tbody>
+					<tr>
+					  <td>2010</td>
+					  <td>林頌堅</td>
+					  <td>利用自組織映射圖技術的研究主題視覺呈現及其在資訊傳播學領域的應用</td>
+					  <td>圖書資訊學研究</td>
+					  <td>第五卷第一期</td>
+					  <td>23~49</td>
+					</tr>
+					<tr>
+					  <td>2010</td>
+					  <td>林頌堅</td>
+					  <td>以詞語共現網絡分析探勘資訊傳播學領域的研究主題與關係</td>
+					  <td>圖書資訊學研究</td>
+					  <td>第四卷第二期</td>
+					  <td>123~148</td>
+					</tr>
+					<tr>
+					  <td>2008</td>
+					  <td>林頌堅</td>
+					  <td>以內容特徵為基礎的網路影像檢索系統及相關技術的探討</td>
+					  <td>台北市立圖書館館訊</td>
+					  <td>第二十五卷第四期</td>
+					  <td>12~33</td>
+					</tr>
+					<tr>
+					  <td>2008</td>
+					  <td>林頌堅</td>
+					  <td>從網站流量資料探討使用者的網路使用行為</td>
+					  <td>圖書資訊學研究</td>
+					  <td>第二卷第二期</td>
+					  <td>39~60</td>
+					</tr>
+					<tr>
+					  <td>2008</td>
+					  <td>高世樺、林頌堅</td>
+					  <td>部落格使用者的資訊行為特徵研究</td>
+					  <td>圖書館學與資訊科學</td>
+					  <td>第三十四卷第一期</td>
+					  <td>62~77</td>
+					</tr>
+					<tr>
+					  <td>2007</td>
+					  <td>陳玫吟、林頌堅</td>
+					  <td>運用專利分析探討3D電腦繪圖技術之發展</td>
+					  <td>圖書資訊學研究</td>
+					  <td>第二卷第一期</td>
+					  <td>123~148</td>
+					</tr>
+					<tr>
+					  <td>2006</td>
+					  <td>林頌堅</td>
+					  <td>資訊需求與資訊科技的擁有與使用之關聯分析</td>
+					  <td>圖書館學與資訊科學</td>
+					  <td>第三十二卷第二期</td>
+					  <td>42~54</td>
+					</tr>
+					<tr>
+					  <td>2006</td>
+					  <td>蘇昱霖、林頌堅</td>
+					  <td>我國證券市場內個別投資者之資訊行為</td>
+					  <td>圖書館學與資訊科學</td>
+					  <td>第三十二卷第二期</td>
+					  <td>93~104</td>
+					</tr>
+					<tr>
+					  <td>2005</td>
+					  <td>林頌堅</td>
+					  <td>索引典之自動化建置與視覺化</td>
+					  <td>圖書與資訊學刊</td>
+					  <td>第五十五期</td>
+					  <td>33~50</td>
+					</tr>
+					<tr>
+					  <td>2005</td>
+					  <td>林頌堅</td>
+					  <td>自動化研究主題探勘方法及其在計算語言學之應用</td>
+					  <td>教育資料與圖書館學</td>
+					  <td>第四十二卷第四期</td>
+					  <td>523~544</td>
+					</tr>
+					<tr>
+					  <td>2004</td>
+					  <td>陳玫吟、林頌堅</td>
+					  <td>建構專利發明人之專利、學術與專業表現關連脈絡－以Pixar動畫製作公司為例</td>
+					  <td>圖書資訊學刊</td>
+					  <td>第二卷第二期</td>
+					  <td>125~150</td>
+					</tr>
+					<tr>
+					  <td>2004</td>
+					  <td>林頌堅</td>
+					  <td>基於術語抽取與術語叢集技術的主題抽取</td>
+					  <td>International Journal of Computational Linguistics and Chinese Language Processing</td>
+					  <td>第九卷第一期</td>
+					  <td>1~16</td>
+					</tr>
+					<tr>
+					  <td>2003</td>
+					  <td>林頌堅</td>
+					  <td>基於詞語抽取的圖書與資訊學刊研究主題分析</td>
+					  <td>圖書與資訊學刊</td>
+					  <td>第四十七期</td>
+					  <td>15~35</td>
+					</tr>
+					<tr>
+					  <td>2002</td>
+					  <td>林頌堅</td>
+					  <td>圖書與資訊學刊論文的高頻詞語抽取與分析</td>
+					  <td>圖書與資訊學刊</td>
+					  <td>第四十二期</td>
+					  <td>15~28</td>
+					</tr>
+					<tr>
+					  <td>2001</td>
+					  <td>林頌堅</td>
+					  <td>基於使用者經驗的花卉資訊檢索系統</td>
+					  <td>資訊傳播與圖書館學</td>
+					  <td>第八卷第二期</td>
+					  <td>53~63</td>
+					</tr>
+				  </tbody>
+				</table>
+			  </div>
+			</div>
+		  </div>
+
+		  <div class="card">
+			<div class="card-header">
+			  <a class="collapsed card-link" data-toggle="collapse" href="#collapseThree">
+				1998年~2000年
+			  </a>
+			</div>
+			<div id="collapseThree" class="collapse" data-parent="#accordion">
+			  <div class="card-body">
+				<table class="table table-hover">
+				  <thead>
+					<tr>
+					  <th>出版年</th>
+					  <th>作者</th>
+					  <th>論文名稱</th>
+					  <th>期刊</th>
+					  <th>卷期</th>
+					  <th>頁碼</th>
+					</tr>
+				  </thead>
+				  <tbody>
+					<tr>
+					  <td>2000</td>
+					  <td>林頌堅</td>
+					  <td>網頁書籤之使用與資訊素養</td>
+					  <td>資訊傳播與圖書館學</td>
+					  <td>第七卷第一期</td>
+					  <td>37~50</td>
+					</tr>
+					<tr>
+					  <td>2000</td>
+					  <td>林頌堅</td>
+					  <td>從網站工作記錄觀察大學圖書館網站使用情形</td>
+					  <td>大學圖書館</td>
+					  <td>第四卷第二期</td>
+					  <td>2~22</td>
+					</tr>
+					<tr>
+					  <td>1999</td>
+					  <td>林頌堅</td>
+					  <td>自動化文件分類在資訊服務上的應用</td>
+					  <td>資訊傳播與圖書館學</td>
+					  <td>第五卷第二期</td>
+					  <td>87~102</td>
+					</tr>
+					<tr>
+					  <td>1998</td>
+					  <td>林頌堅</td>
+					  <td>科際整合研究中學術資訊共享問題初探</td>
+					  <td>大學圖書館</td>
+					  <td>第二卷第四期</td>
+					  <td>42~53</td>
+					</tr>
+					<tr>
+					  <td>1998</td>
+					  <td>林頌堅</td>
+					  <td>語音輸入方法在超媒體閱讀上的應用</td>
+					  <td>圖書館學與資訊科學</td>
+					  <td>第二十四卷第一期</td>
+					  <td>31~49</td>
+					</tr>
+				  </tbody>
+				</table>
+			  </div>
+			</div>
+		  </div>
+
+		</div>
+      </div>
+    </section>
+	
     <hr class="m-0">
 
     <section class="resume-section p-3 p-lg-5 d-flex align-items-center" id="interests">
