--- a/index.html
+++ b/index.html
@@ -252,7 +252,7 @@
 		  <div class="card">
 		    <div class="card-header">
 			  <a class="card-link" data-toggle="collapse" href="#collapseOne">
-				2011年~
+				106~107學年度
 			  </a>
 			</div>
 			<div id="collapseOne" class="collapse show" data-parent="#accordion">
@@ -260,41 +260,31 @@
 				<table class="table table-hover">
 				  <thead>
 					<tr>
-					  <th>年分</th>
+					  <th>學年度-學期</th>
 					  <th>擔任人</th>
 					  <th>職位名稱</th>
 					</tr>
 				  </thead>
 				  <tbody>
 					<tr>
-					  <td>2017</td>
-					  <td>林頌堅</td>
-					  <td>000</td>
+					  <td>107-2</td>
+					  <td>陳奕碩</td>
+					  <td>風紀股長</td>>
 					</tr>
 					<tr>
-					  <td>2015</td>
-					  <td>林頌堅</td>
-					  <td>利用文字內容主題特徵與機器學習方法探討MIS相關期刊在ISI資料庫上的主題分類</td>
+					  <td>107-2</td>
+					  <td>陳奕碩</td>
+					  <td>英文小老師</td>
 					</tr>
 					<tr>
-					  <td>2014</td>
-					  <td>林頌堅</td>
-					  <td>資訊科學期刊的主題分布與多樣性研究</td>
+					  <td>107-1</td>
+					  <td>陳奕碩</td>
+					  <td>班長</td>
 					</tr>
 					<tr>
-					  <td>2014</td>
-					  <td>林頌堅</td>
-					  <td>以主題模型方法為基礎的資訊計量學領域研究主題分析</td>
-					</tr>
-					<tr>
-					  <td>2013</td>
-					  <td>林頌堅</td>
-					  <td>利用網路結構分析的研究主題視覺化</td>
-					</tr>
-					<tr>
-					  <td>2012</td>
-					  <td>林頌堅</td>
-					  <td>資訊傳播學領域的研究主題發展分析</td>
+					  <td>106-1</td>
+					  <td>陳奕碩</td>
+					  <td>風紀股長</td>
 					</tr>
 				  </tbody>
 				</table>
@@ -305,7 +295,7 @@
 		  <div class="card">
 			<div class="card-header">
 			  <a class="collapsed card-link" data-toggle="collapse" href="#collapseTwo">
-				2001年~2010年
+				104~105學年度
 			  </a>
 			</div>
 			<div id="collapseTwo" class="collapse" data-parent="#accordion">
@@ -313,99 +303,16 @@
 				<table class="table table-hover">
 				  <thead>
 					<tr>
-					  <th>出版年</th>
-					  <th>作者</th>
-					  <th>論文名稱</th>
+					  <th>學年度-學期</th>
+					  <th>擔任人</th>
+					  <th>職位名稱</th>
 					</tr>
 				  </thead>
 				  <tbody>
 					<tr>
-					  <td>2010</td>
-					  <td>林頌堅</td>
-					  <td>利用自組織映射圖技術的研究主題視覺呈現及其在資訊傳播學領域的應用</td>
-					</tr>
-					<tr>
-					  <td>2010</td>
-					  <td>林頌堅</td>
-					  <td>以詞語共現網絡分析探勘資訊傳播學領域的研究主題與關係</td>
-					</tr>
-					<tr>
-					  <td>2008</td>
-					  <td>林頌堅</td>
-					  <td>以內容特徵為基礎的網路影像檢索系統及相關技術的探討</td>
-					</tr>
-					<tr>
-					  <td>2008</td>
-					  <td>林頌堅</td>
-					  <td>從網站流量資料探討使用者的網路使用行為</td>
-					</tr>
-					<tr>
-					  <td>2008</td>
-					  <td>高世樺、林頌堅</td>
-					  <td>部落格使用者的資訊行為特徵研究</td>
-					</tr>
-					<tr>
-					  <td>2007</td>
-					  <td>陳玫吟、林頌堅</td>
-					  <td>運用專利分析探討3D電腦繪圖技術之發展</td>
-					</tr>
-					<tr>
-					  <td>2006</td>
-					  <td>林頌堅</td>
-					  <td>資訊需求與資訊科技的擁有與使用之關聯分析</td>
-					</tr>
-					<tr>
-					  <td>2006</td>
-					  <td>蘇昱霖、林頌堅</td>
-					  <td>我國證券市場內個別投資者之資訊行為</td>
-					</tr>
-					<tr>
-					  <td>2005</td>
-					  <td>林頌堅</td>
-					  <td>索引典之自動化建置與視覺化</td>
-					</tr>
-					<tr>
-					  <td>2005</td>
-					  <td>林頌堅</td>
-					  <td>自動化研究主題探勘方法及其在計算語言學之應用</td>
-					</tr>
-					<tr>
-					  <td>2004</td>
-					  <td>陳玫吟、林頌堅</td>
-					  <td>建構專利發明人之專利、學術與專業表現關連脈絡－以Pixar動畫製作公司為例</td>
-					</tr>
-				  </tbody>
-				</table>
-			  </div>
-			</div>
-		  </div>
-
-		  <div class="card">
-			<div class="card-header">
-			  <a class="collapsed card-link" data-toggle="collapse" href="#collapseThree">
-				1998年~2000年
-			  </a>
-			</div>
-			<div id="collapseThree" class="collapse" data-parent="#accordion">
-			  <div class="card-body">
-				<table class="table table-hover">
-				  <thead>
-					<tr>
-					  <th>出版年</th>
-					  <th>作者</th>
-					  <th>論文名稱</th>
-					</tr>
-				  </thead>
-				  <tbody>
-					<tr>
-					  <td>2000</td>
-					  <td>林頌堅</td>
-					  <td>網頁書籤之使用與資訊素養</td>
-					</tr>
-					<tr>
-					  <td>2000</td>
-					  <td>林頌堅</td>
-					  <td>從網站工作記錄觀察大學圖書館網站使用情形</td>
+					  <td>105-1</td>
+					  <td>陳奕碩</td>
+					  <td>康樂股長</td>
 					</tr>
 				  </tbody>
 				</table>
