--- a/index.html
+++ b/index.html
@@ -247,7 +247,7 @@
 
     <section class="resume-section p-3 p-lg-5 d-flex align-items-center" id="publications">
       <div class="w-100">
-        <h2 class="mb-5"><span class="text-primary">著作</span>Publications</h2>
+        <h2 class="mb-5"><span class="text-primary">求學時期擔任幹部</span>Serve as a cadre</h2>
 		<div id="accordion">
 		  <div class="card">
 		    <div class="card-header">
