--- a/index.html
+++ b/index.html
@@ -54,13 +54,10 @@
           <a class="nav-link js-scroll-trigger" href="#skills">Skills</a>
         </li>
 		<li class="nav-item">
-          <a class="nav-link js-scroll-trigger" href="serve as a cadre">serve as a cadre</a>
+          <a class="nav-link js-scroll-trigger" href="#serve as a cadre">serve as a cadre</a>
         </li>
         <li class="nav-item">
           <a class="nav-link js-scroll-trigger" href="#interests">Interests</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link js-scroll-trigger" href="#awards">Awards</a>
         </li>
       </ul>
     </div>
@@ -70,14 +67,10 @@
 
     <section class="resume-section p-3 p-lg-5 d-flex align-items-center" id="about">
       <div class="w-100">
-        <h1 class="mb-0">陳奕碩
-          <p>
-          <h2>
-          <span class="text-primary">CHEN-YI-SHUO</span>
-          </h2>
-          </p>
-        </h1>
-        <div class="subheading mb-5">新北市新莊區
+        <h1 class="mb-0">陳奕碩</h1>
+		<h1><span class="text-primary">Yi-Shuo Chen</span></h1>
+        <div class="subheading mb-5">
+		<p>新北市新莊區</p>
           <a href="mailto:yishuo1116@email.com">yishuo1116@gmail.com</a>
         </div>
         <p class="lead mb-5">興趣使然的資傳系學生，下課時也仍然努力追求自己的夢想，對生活充滿動力的青春少年</p>
