--- a/index.html
+++ b/index.html
@@ -18,10 +18,10 @@
   <link href="https://fonts.googleapis.com/css?family=Muli:400,400i,800,800i" rel="stylesheet">
   <link href="vendor/fontawesome-free/css/all.min.css" rel="stylesheet">
 
-  <!-- Custom styles for this template -->
-  <link href="css/resume.min.css" rel="stylesheet">
   
   <link href="https://fonts.googleapis.com/css?family=Noto+Sans+TC" rel="stylesheet">
+  <!-- Custom styles for this template -->
+  <link href="css/resume.min.css" rel="stylesheet">
   
   <link href="css/MYresume.min.css" rel="stylesheet">
 
@@ -77,14 +77,14 @@
         <p class="lead mb-5">Interested students, who are still motivated by their enthusiasm, are still striving to pursue their dreams in the course of class.-translation</p>
         <div class="social-icons">
           <a href="#">
-            <i class="fab fa-linkedin-in"></i>
-          </a>
-          <a href="#">
             <i class="fab fa-github"></i>
           </a>
           <a href="#">
             <i class="fab fa-facebook-f"></i>
           </a>
+		  <a href="#">
+			<i class="fab fa-instagram"></i>
+		  </a>
         </div>
       </div>
     </section>
