--- a/index.html
+++ b/index.html
@@ -85,6 +85,9 @@
 		  <a href="#">
 			<i class="fab fa-instagram"></i>
 		  </a>
+		  <a href="#">
+			<i class="fa fa-twitter-square"></i>
+		  </a>
         </div>
       </div>
     </section>
