--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
 			<i class="fab fa-instagram"></i>
 		  </a>
 		  <a href="#">
-			<i class="fa fa-twitter-square"></i>
+			<i class="fa fa-twitter"></i>
 		  </a>
         </div>
       </div>
@@ -96,7 +96,7 @@
 
     <section class="resume-section p-3 p-lg-5 d-flex justify-content-center" id="experience">
       <div class="w-100">
-        <h2 class="mb-5">Experience</h2>
+        <h2 class="mb-5">經歷</h2>
 
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
           <div class="resume-content">
