--- a/index.html
+++ b/index.html
@@ -70,17 +70,14 @@
         <p class="lead mb-5">興趣使然的資傳系學生，下課時也仍然努力追求自己的夢想，對生活充滿動力的青春少年</p>
         <p class="lead mb-5">Interested students, who are still motivated by their enthusiasm, are still striving to pursue their dreams in the course of class.-translation</p>
         <div class="social-icons">
-          <a href="#">
+          <a href="https://github.com/yishuo1116">
             <i class="fab fa-github"></i>
           </a>
-          <a href="#">
+          <a href="https://www.facebook.com/profile.php?id=100007327572833&ref=bookmarks">
             <i class="fab fa-facebook-f"></i>
           </a>
-		  <a href="#">
+		  <a href="https://www.instagram.com/yishuo1116/?hl=zh-tw">
 			<i class="fab fa-instagram"></i>
-		  </a>
-		  <a href="#">
-			<i class="fa fa-twitter"></i>
 		  </a>
         </div>
       </div>
