--- a/index.html
+++ b/index.html
@@ -228,8 +228,8 @@
     <section class="resume-section p-3 p-lg-5 d-flex align-items-center" id="interests">
       <div class="w-100">
         <h2 class="mb-5"><span class="text-primary">興趣</span>Interests</h2>
-        <p>Apart from being a web developer, I enjoy most of my time being outdoors. In the winter, I am an avid skier and novice ice climber. During the warmer months here in Colorado, I enjoy mountain biking, free climbing, and kayaking.</p>
-        <p class="mb-0">When forced indoors, I follow a number of sci-fi and fantasy genre movies and television shows, I am an aspiring chef, and I spend a large amount of my free time exploring the latest technology advancements in the front-end web development world.</p>
+        <p>我平時喜歡玩電腦遊戲，最常玩的是APEX、LOL、Overwatch。其他嗜好是喜歡模型，因為我覺得模型很精緻，像是汽車模型或是鋼彈模型等。</p>
+        <p class="mb-0">I usually like to play computer games, the most commonly used are APEX, LOL, Overwatch. Other hobbies are like models, because I think the models are very delicate, like car models or GUNPULA.</p>
       </div>
     </section>
 
