--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
 
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
           <div class="resume-content">
-            <h3 class="mb-0">服務生</h3>
+            <h3 class="mb-0">服務生 Waiter</h3>
             <div class="subheading mb-3">千葉火鍋 Chiba Sukiyaki</div>
           </div>
           <div class="resume-date text-md-right">
