--- a/index.html
+++ b/index.html
@@ -232,6 +232,8 @@
         <p class="mb-0">I usually like to play computer games, the most commonly used are APEX, LOL, Overwatch. Other hobbies are like models, because I think the models are very delicate, like car models or GUNPULA.</p>
       </div>
     </section>
+	
+	<img src="img/DSC_0020.jpg alt"">
 
   
 
