--- a/index.html
+++ b/index.html
@@ -50,6 +50,9 @@
         <li class="nav-item">
           <a class="nav-link js-scroll-trigger" href="#education">Education</a>
         </li>
+		<li class="nav-item">
+          <a class="nav-link js-scroll-trigger" href="#about">Serve as a cadre</a>
+        </li>
         <li class="nav-item">
           <a class="nav-link js-scroll-trigger" href="#interests">Interests</a>
         </li>
@@ -144,7 +147,7 @@
 	
     <hr class="m-0">
 
-    <section class="resume-section p-3 p-lg-5 d-flex align-items-center" id="publications">
+    <section class="resume-section p-3 p-lg-5 d-flex align-items-center" id="Serve as a cadre">
       <div class="w-100">
         <h2 class="mb-5"><span class="text-primary">求學時期擔任幹部</span>Serve as a cadre</h2>
 		<div id="accordion">
