--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
           <a class="nav-link js-scroll-trigger" href="#education">Education</a>
         </li>
 		<li class="nav-item">
-          <a class="nav-link js-scroll-trigger" href="#about">Serve as a cadre</a>
+          <a class="nav-link js-scroll-trigger" href="#Serve as a cadre">Serve as a cadre</a>
         </li>
         <li class="nav-item">
           <a class="nav-link js-scroll-trigger" href="#interests">Interests</a>
