--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
           <a class="nav-link js-scroll-trigger" href="#education">Education</a>
         </li>
 		<li class="nav-item">
-          <a class="nav-link js-scroll-trigger" href="#Serve as a cadre">Serve as a cadre</a>
+          <a class="nav-link js-scroll-trigger" href="#Cadre">Cadre</a>
         </li>
         <li class="nav-item">
           <a class="nav-link js-scroll-trigger" href="#interests">Interests</a>
@@ -147,9 +147,9 @@
 	
     <hr class="m-0">
 
-    <section class="resume-section p-3 p-lg-5 d-flex align-items-center" id="Serve as a cadre">
+    <section class="resume-section p-3 p-lg-5 d-flex align-items-center" id="Cadre">
       <div class="w-100">
-        <h2 class="mb-5"><span class="text-primary">求學時期擔任幹部</span>Serve as a cadre</h2>
+        <h2 class="mb-5"><span class="text-primary">求學時期擔任幹部</span>Cadre</h2>
 		<div id="accordion">
 		  <div class="card">
 		    <div class="card-header">
