--- a/index.html
+++ b/index.html
@@ -82,6 +82,9 @@
 		  <a href="https://www.instagram.com/yishuo1116/?hl=zh-tw">
 			<i class="fab fa-instagram"></i>
 		  </a>
+		  <a href="https://twitter.com/h_kanna_0203">
+            <i class="fab fa-twitter"></i>
+		  </a>
         </div>
       </div>
     </section>
