--- a/index.html
+++ b/index.html
@@ -239,6 +239,42 @@
       </div>
     </section>
 	
+	<div class="row">
+    <div class="col-lg-4 col-sm-6 mb-4">
+      <div class="card h-100">
+        <a href="#"><img class="card-img-top" src="img/DSC_0020.jpg" alt=""></a>
+        <div class="card-body">
+          <h4 class="card-title">
+            <a href="#">夕陽照</a>
+          </h4>
+          <p class="card-text">這是我 高中的時候去看海景的時候同學和我一起拍的夕陽，那一天等了好久才終於等到這個時刻來拍下這張照片</p>
+        </div>
+      </div>
+    </div>
+	<div class="col-lg-4 col-sm-6 mb-4">
+      <div class="card h-100">
+        <a href="#"><img class="card-img-top" src="img/IMG_0688.JPG" alt=""></a>
+        <div class="card-body">
+          <h4 class="card-title">
+            <a href="#">鬼屋工作人員 大合照</a>
+          </h4>
+          <p class="card-text">這是我上大學後第一次去辦的活動，是跟話劇社的學長姐們一起辦的鬼屋密室逃脫真的非常的有趣，在活動中我也學到了很多辦活動相關的技能</p>
+        </div>
+      </div>
+    </div>
+	<div class="col-lg-4 col-sm-6 mb-4">
+      <div class="card h-100">
+        <a href="#"><img class="card-img-top" src="img/IMAG0702.jpg" alt=""></a>
+        <div class="card-body">
+          <h4 class="card-title">
+            <a href="#">好吃的王品</a>
+          </h4>
+          <p class="card-text">這是在上個暑假的時候，我和家人一起去吃西堤牛排我個人覺得非常好吃也非常的有藝術感，所以就順手把它拍下來了。</p>
+        </div>
+      </div>
+    </div>
+</div>
+	
 	<img src="img/DSC_0020.jpg">
 
   
