--- a/index.html
+++ b/index.html
@@ -267,7 +267,7 @@
         <a href="#"><img class="card-img-top" src="img/IMAG0702.jpg" alt=""></a>
         <div class="card-body">
           <h4 class="card-title">
-            <a href="#">好吃的王品</a>
+            <a href="88888888888888888">好吃的王品</a>
           </h4>
           <p class="card-text">這是在上個暑假的時候，我和家人一起去吃西堤牛排我個人覺得非常好吃也非常的有藝術感，所以就順手把它拍下來了。</p>
         </div>
