--- a/index.html
+++ b/index.html
@@ -242,7 +242,7 @@
 	<div class="row">
     <div class="col-lg-4 col-sm-6 mb-4">
       <div class="card h-100">
-        <a href="#"><img class="card-img-top" src="img/DSC_0020.jpg" alt=""></a>
+        <a href="#"><img class="card-img-top" src="img/DSC_0020.JPG" alt=""></a>
         <div class="card-body">
           <h4 class="card-title">
             <a href="#">夕陽照</a>
@@ -267,7 +267,7 @@
         <a href="#"><img class="card-img-top" src="img/IMAG0702.jpg" alt=""></a>
         <div class="card-body">
           <h4 class="card-title">
-            <a href="88888888888888888">好吃的王品</a>
+            <a href="">好吃的王品</a>
           </h4>
           <p class="card-text">這是在上個暑假的時候，我和家人一起去吃西堤牛排我個人覺得非常好吃也非常的有藝術感，所以就順手把它拍下來了。</p>
         </div>
