--- a/index.html
+++ b/index.html
@@ -253,7 +253,7 @@
     </div>
 	<div class="col-lg-4 col-sm-6 mb-4">
       <div class="card h-100">
-        <a href="#"><img class="card-img-top" src="img/IMG_0688.JPG" alt=""></a>
+        <a href="#"><img class="card-img-top" src="img/DSC_0226_1.JPG" alt=""></a>
         <div class="card-body">
           <h4 class="card-title">
             <a href="#">鬼屋工作人員 大合照</a>
