--- a/index.html
+++ b/index.html
@@ -247,7 +247,7 @@
           <h4 class="card-title">
             <a href="#">汽車照</a>
           </h4>
-          <p class="card-text">這是我之前在西門町的時候看到的Mercedes-AMG GT R，超帥的。</p>
+          <p class="card-text">我喜歡汽車，所以我在外面看到我喜歡的車子都會拍下來。這是我之前在西門町的時候看到的Mercedes-AMG GT R，超帥的。</p>
         </div>
       </div>
     </div>
@@ -256,9 +256,9 @@
         <a href="#"><img class="card-img-top" src="img/DSC_0226_1.JPG" alt=""></a>
         <div class="card-body">
           <h4 class="card-title">
-            <a href="#">鬼屋工作人員 大合照</a>
+            <a href="#">我的小汽車收藏</a>
           </h4>
-          <p class="card-text">這是我上大學後第一次去辦的活動，是跟話劇社的學長姐們一起辦的鬼屋密室逃脫真的非常的有趣，在活動中我也學到了很多辦活動相關的技能</p>
+          <p class="card-text">這是我的小車收藏，大部分都是1:64的比例，小巧精緻。</p>
         </div>
       </div>
     </div>
