--- a/index.html
+++ b/index.html
@@ -264,12 +264,12 @@
     </div>
 	<div class="col-lg-4 col-sm-6 mb-4">
       <div class="card h-100">
-        <a href="#"><img class="card-img-top" src="img/IMAG0702.jpg" alt=""></a>
+        <a href="#"><img class="card-img-top" src="img/mobile01-46dc71bfce5cbb6ddc10c04a9100c5ce.jpg" alt=""></a>
         <div class="card-body">
           <h4 class="card-title">
-            <a href="">好吃的王品</a>
+            <a href="">我最喜歡的鋼彈模型-獨角獸剛彈</a>
           </h4>
-          <p class="card-text">這是在上個暑假的時候，我和家人一起去吃西堤牛排我個人覺得非常好吃也非常的有藝術感，所以就順手把它拍下來了。</p>
+          <p class="card-text">這是在我高中的時候，每天晚上都花4個小時，費時四個月完成的鋼彈模型。他有36公分高，非常大!</p>
         </div>
       </div>
     </div>
