--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
           <a href="mailto:yishuo1116@email.com">yishuo1116@gmail.com</a>
         </div>
         <p class="lead mb-5">興趣使然的資傳系學生，下課時也仍然努力追求自己的夢想，對生活充滿動力的青春少年</p>
-        <p class="lead mb-5">Interested study Information and communication Department, who are still motivated by their enthusiasm, are still striving to pursue their dreams in the course of class.-translation</p>
+        <p class="lead mb-5">Interested study Information and communication Department, who are Still trying to pursue his dreams Out of school,Full of motivation for life teenager. </p>
         <div class="social-icons">
           <a href="https://github.com/yishuo1116">
             <i class="fab fa-github"></i>
