--- a/index.html
+++ b/index.html
@@ -99,6 +99,7 @@
           <div class="resume-content">
             <h3 class="mb-0">房務人員 Housekeeper </h3>
             <div class="subheading mb-3">見晴花園度假山莊 Sun Shine Vacation Villa</div>
+			<p class="card-text">8888888888888888888888888888888
           </div>
           <div class="resume-date text-md-right">
             <span class="text-primary">July 2018 - August 2018</span>
