--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
           <div class="resume-content">
             <h3 class="mb-0">房務人員 Housekeeper </h3>
             <div class="subheading mb-3">見晴花園度假山莊 Sun Shine Vacation Villa</div>
-			<p class="card-text">這是我第一次打工，原本只是好奇房務人員的工作內容，但後來學到了更多的事情，包括工作應有的態度和賺錢是多麼的不容易，也讓我在上大學時懂得控制花費，養成理財的觀念。
+			<p class="card-text">這是我第一次打工，原本只是好奇房務人員的工作內容和賺點錢，但後來學到了許多的事情，包括工作應有的態度和賺錢是多麼的不容易，也讓我在上大學時懂得控制花費，養成理財的觀念。
           </div>
           <div class="resume-date text-md-right">
             <span class="text-primary">July 2018 - August 2018</span>
@@ -110,6 +110,7 @@
           <div class="resume-content">
             <h3 class="mb-0">服務生 Waiter</h3>
             <div class="subheading mb-3">千葉火鍋 Chiba Sukiyaki</div>
+			<p class="card-text">利用課餘時間打工，讓自己的生活有些目標，而不只是一直玩。
           </div>
           <div class="resume-date text-md-right">
             <span class="text-primary">April 2019 - </span>
