--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
 		<p>新北市新莊區</p>
           <a href="mailto:yishuo1116@email.com">yishuo1116@gmail.com</a>
         </div>
-        <p class="lead mb-5">興趣使然的資傳系學生，下課時也仍然努力追求自己的夢想，對生活充滿動力的青春少年</p>
+        <p class="lead mb-5">興趣使然的成為了資傳系學生，喜歡自由自在的生活，對生活充滿動力的青春少年</p>
         <p class="lead mb-5">Interested study Information and communication Department, who are Still trying to pursue his dreams Out of school,Full of motivation for life teenager. </p>
         <div class="social-icons">
           <a href="https://github.com/yishuo1116">
@@ -110,7 +110,7 @@
           <div class="resume-content">
             <h3 class="mb-0">服務生 Waiter</h3>
             <div class="subheading mb-3">千葉火鍋 Chiba Sukiyaki</div>
-			<p class="card-text">利用課餘時間打工，讓自己的生活有些目標，而不只是一直玩。
+			<p class="card-text">利用課餘時間打工，讓自己的生活不要過於鬆懈，停滯不前。給自己的目標是要一步一步完成的，壓力帶來動力。
           </div>
           <div class="resume-date text-md-right">
             <span class="text-primary">April 2019 - </span>
