--- a/index.html
+++ b/index.html
@@ -238,6 +238,7 @@
       <div class="w-100">
         <h2 class="mb-5"><span class="text-primary">興趣</span>Interests</h2>
         <p>我平時喜歡玩電腦遊戲，最常玩的是APEX、LOL、Overwatch。其他嗜好是喜歡模型，因為我覺得模型很精緻，像是汽車模型或是鋼彈模型等。</p>
+		<p class="mb-0">我喜歡製作鋼彈模型，我很享受將原本許多細小的零件從零件上剪下來，經過打磨、補色、畫墨線、噴漆和組裝等，成為一個完整的整體的過程。讓我很有成就感。我覺得製作模型是一件非常耗神、需要耐心的事情，因為步驟極其繁複而且每一步驟都要小心翼翼、專注的處理，不然一失足成千古恨，補救過程更麻煩了。
         <p class="mb-0">I usually like to play computer games, the most commonly used are APEX, LOL, Overwatch. Other hobbies are like models, because I think the models are very delicate, like car models or GUNPULA.</p>
       </div>
     </section>
@@ -270,7 +271,7 @@
         <a href="#"><img class="card-img-top" src="img/mobile01-46dc71bfce5cbb6ddc10c04a9100c5ce.jpg" alt=""></a>
         <div class="card-body">
           <h4 class="card-title">
-            <a href="">我最喜歡的鋼彈模型-獨角獸剛彈</a>
+            <a href="">我最喜歡的鋼彈模型-獨角獸鋼彈</a>
           </h4>
           <p class="card-text">這是在我高中的時候，每天晚上都花4個小時，費時四個月完成的鋼彈模型。他有36公分高，非常大!</p>
         </div>
