--- a/index.html
+++ b/index.html
@@ -143,6 +143,11 @@
           <div class="resume-date text-md-right">
             <span class="text-primary">September 2012 - July 2015</span>
           </div>
+		  <p class="mb-0">住宿生活　團體配合
+              由於從國小就開始住校，所以我十分獨立自主。也在住宿生活中，經由師長直言提醒，以及與同學二十四小時相處，我磨去昔日固執、急躁、又不擅溝通表達的稜角，因為住在一起總是要互相包容，不可事事如自己的意，我也學會適時表達建議，並調整步伐以配合群體，也讓我體會到有時能「讓」也是一種智慧，要做到嚴以律己，寬以待人，把心力放在目標上。
+              住宿生活需要配合團體作息，也有許多機會需要團隊合作與互相體諒。
+		  <p class="mb-0">例如學年結束時，同學要互相溝通、協調，每個人盡責地完成自己的工作才能有效率地完成宿舍搬遷及大掃除，當其他同學進度比較慢時提供協助，團隊合作完成目標。
+
         </div>
 
       </div>
@@ -238,7 +243,8 @@
       <div class="w-100">
         <h2 class="mb-5"><span class="text-primary">興趣</span>Interests</h2>
         <p>我平時喜歡玩電腦遊戲，最常玩的是APEX、LOL、Overwatch。其他嗜好是喜歡模型，因為我覺得模型很精緻，像是汽車模型或是鋼彈模型等。</p>
-		<p class="mb-0">我喜歡製作鋼彈模型，我很享受將原本許多細小的零件從零件上剪下來，經過打磨、補色、畫墨線、噴漆和組裝等，成為一個完整的整體的過程。讓我很有成就感。我覺得製作模型是一件非常耗神、需要耐心的事情，因為步驟極其繁複而且每一步驟都要小心翼翼、專注的處理，不然一失足成千古恨，補救過程更麻煩了。
+		<p class="mb-0">我喜歡製作鋼彈模型，我很享受將原本許多細小的零件從零件上剪下來，經過打磨、補色、畫墨線、噴漆和組裝等，成為一個完整的整體的過程。讓我很有成就感。
+		<p class="mb-0">我覺得製作模型是一件非常耗神、需要耐心的事情，因為步驟極其繁複而且每一步驟都要小心翼翼、專注的處理，不然一失足成千古恨，補救過程更麻煩了。
         <p class="mb-0">I usually like to play computer games, the most commonly used are APEX, LOL, Overwatch. Other hobbies are like models, because I think the models are very delicate, like car models or GUNPULA.</p>
       </div>
     </section>
