--- a/index.html
+++ b/index.html
@@ -143,9 +143,7 @@
           <div class="resume-date text-md-right">
             <span class="text-primary">September 2012 - July 2015</span>
           </div>
-		  <p class="mb-0">住宿生活　團體配合
-              由於從國小就開始住校，所以我十分獨立自主。也在住宿生活中，經由師長直言提醒，以及與同學二十四小時相處，我磨去昔日固執、急躁、又不擅溝通表達的稜角，因為住在一起總是要互相包容，不可事事如自己的意，我也學會適時表達建議，並調整步伐以配合群體，也讓我體會到有時能「讓」也是一種智慧，要做到嚴以律己，寬以待人，把心力放在目標上。
-              住宿生活需要配合團體作息，也有許多機會需要團隊合作與互相體諒。
+		  <p class="mb-0">從國小就開始住校，所以我十分獨立自主。也在住宿生活中，經由師長直言提醒，以及與同學二十四小時相處，我磨去昔日固執、急躁、又不擅溝通表達的稜角，因為住在一起總是要互相包容，不可事事如自己的意，我也學會適時表達建議，並調整步伐以配合群體，也讓我體會到有時能「讓」也是一種智慧，要做到嚴以律己，寬以待人，把心力放在目標上。住宿生活需要配合團體作息，也有許多機會需要團隊合作與互相體諒。
 		  <p>例如學年結束時，同學要互相溝通、協調，每個人盡責地完成自己的工作才能有效率地完成宿舍搬遷及大掃除，當其他同學進度比較慢時提供協助，團隊合作完成目標。</p>
 
         </div>
