--- a/index.html
+++ b/index.html
@@ -239,8 +239,8 @@
       <div class="w-100">
         <h2 class="mb-5"><span class="text-primary">興趣</span>Interests</h2>
         <p>我平時喜歡玩電腦遊戲，最常玩的是APEX、LOL、Overwatch。其他嗜好是喜歡模型，因為我覺得模型很精緻，像是汽車模型或是鋼彈模型等。</p>
-		<p class="mb-0">我喜歡製作鋼彈模型，我很享受將原本許多細小的零件從零件上剪下來，經過打磨、補色、畫墨線、噴漆和組裝等，成為一個完整的整體的過程。讓我很有成就感。
-		<p class="mb-0">我覺得製作模型是一件非常耗神、需要耐心的事情，因為步驟極其繁複而且每一步驟都要小心翼翼、專注的處理，不然一失足成千古恨，補救過程更麻煩了。
+		<p>我喜歡製作鋼彈模型，我很享受將原本許多細小的零件從零件上剪下來，經過打磨、補色、畫墨線、噴漆和組裝等，成為一個完整的整體的過程。讓我很有成就感。</p>
+		<p>我覺得製作模型是一件非常耗神、需要耐心的事情，因為步驟極其繁複而且每一步驟都要小心翼翼、專注的處理，不然一失足成千古恨，補救過程更麻煩了。</p>
 		<p>製作模型培養了我專注和耐心，也讓我做事情更穩重。</p>
         <p class="mb-0">I usually like to play computer games, the most commonly used are APEX, LOL, Overwatch. Other hobbies are like models, because I think the models are very delicate, like car models or GUNPULA.</p>
       </div>
