--- a/index.html
+++ b/index.html
@@ -279,6 +279,28 @@
         </div>
       </div>
     </div>
+	<div class="col-lg-4 col-sm-6 mb-4">
+      <div class="card h-100">
+        <a href="#"><img class="card-img-top" src="img/DSC_0226_1.JPG" alt=""></a>
+        <div class="card-body">
+          <h4 class="card-title">
+            <a href="#">我的小汽車收藏</a>
+          </h4>
+          <p class="card-text">這是我的小車收藏，大部分都是1:64的比例，小巧精緻。</p>
+        </div>
+      </div>
+    </div>
+	<div class="col-lg-4 col-sm-6 mb-4">
+      <div class="card h-100">
+        <a href="#"><img class="card-img-top" src="img/DSC_0226_1.JPG" alt=""></a>
+        <div class="card-body">
+          <h4 class="card-title">
+            <a href="#">我的小汽車收藏</a>
+          </h4>
+          <p class="card-text">這是我的小車收藏，大部分都是1:64的比例，小巧精緻。</p>
+        </div>
+      </div>
+    </div>
 </div>
 
   
