--- a/index.html
+++ b/index.html
@@ -281,7 +281,7 @@
     </div>
 	<div class="col-lg-4 col-sm-6 mb-4">
       <div class="card h-100">
-        <a href="#"><img class="card-img-top" src="img/DSC_0226_1.JPG" alt=""></a>
+        <a href="#"><img class="card-img-top" src="img/666666666666.jpg" alt=""></a>
         <div class="card-body">
           <h4 class="card-title">
             <a href="#">我的小汽車收藏</a>
@@ -292,7 +292,7 @@
     </div>
 	<div class="col-lg-4 col-sm-6 mb-4">
       <div class="card h-100">
-        <a href="#"><img class="card-img-top" src="img/DSC_0226_1.JPG" alt=""></a>
+        <a href="#"><img class="card-img-top" src="img/original.jpg" alt=""></a>
         <div class="card-body">
           <h4 class="card-title">
             <a href="#">我的小汽車收藏</a>
