--- a/index.html
+++ b/index.html
@@ -284,9 +284,9 @@
         <a href="#"><img class="card-img-top" src="img/666666666666.jpg" alt=""></a>
         <div class="card-body">
           <h4 class="card-title">
-            <a href="#">我的小汽車收藏</a>
+            <a href="#">英雄聯盟</a>
           </h4>
-          <p class="card-text">這是我的小車收藏，大部分都是1:64的比例，小巧精緻。</p>
+          <p class="card-text">《英雄聯盟》（英語：League of Legends，簡稱LoL）是由Riot Games開發及發行的一款多人線上戰術擂台（MOBA）遊戲。</p>
         </div>
       </div>
     </div>
@@ -295,9 +295,9 @@
         <a href="#"><img class="card-img-top" src="img/original.jpg" alt=""></a>
         <div class="card-body">
           <h4 class="card-title">
-            <a href="#">我的小汽車收藏</a>
+            <a href="#">Apex英雄</a>
           </h4>
-          <p class="card-text">這是我的小車收藏，大部分都是1:64的比例，小巧精緻。</p>
+          <p class="card-text">《Apex英雄》（英語：Apex Legends），是一個由Respawn Entertainment開發，由美商藝電發行的免費大逃殺類多人線上角色扮演第一人稱射擊遊戲。</p>
         </div>
       </div>
     </div>
