--- a/index.html
+++ b/index.html
@@ -284,7 +284,7 @@
         <a href="#"><img class="card-img-top" src="img/666666666666.jpg" alt=""></a>
         <div class="card-body">
           <h4 class="card-title">
-            <a href="#">英雄聯盟</a>
+            <a href="https://zh.wikipedia.org/wiki/%E8%8B%B1%E9%9B%84%E8%81%94%E7%9B%9F">英雄聯盟</a>
           </h4>
           <p class="card-text">《英雄聯盟》（英語：League of Legends，簡稱LoL）是由Riot Games開發及發行的一款多人線上戰術擂台（MOBA）遊戲。</p>
         </div>
@@ -295,7 +295,7 @@
         <a href="#"><img class="card-img-top" src="img/original.jpg" alt=""></a>
         <div class="card-body">
           <h4 class="card-title">
-            <a href="#">Apex英雄</a>
+            <a href="https://zh.wikipedia.org/wiki/Apex%E8%8B%B1%E9%9B%84">Apex英雄</a>
           </h4>
           <p class="card-text">《Apex英雄》（英語：Apex Legends），是一個由Respawn Entertainment開發，由美商藝電發行的免費大逃殺類多人線上角色扮演第一人稱射擊遊戲。</p>
         </div>
