--- a/index.html
+++ b/index.html
@@ -275,7 +275,7 @@
           <h4 class="card-title">
             <a href="https://www.toy-people.com/?p=28632">我最喜歡的鋼彈模型-獨角獸鋼彈</a>
           </h4>
-          <p class="card-text">這是在我高中的時候，每天晚上都花4個小時，費時四個月完成的鋼彈模型。他有36公分高，非常大!</p>
+          <p class="card-text">在所有的鋼彈之中我最喜歡這台，因為我喜歡他變形的結構，外型也很帥氣。這是在我高中的時候，每天晚上都花4個小時，費時四個月完成的鋼彈模型。他有36公分高，非常大!</p>
         </div>
       </div>
     </div>
