--- a/index.html
+++ b/index.html
@@ -145,7 +145,8 @@
           </div>
 
         </div>
-       <p class="mb-0">從國小就開始住校，所以我十分獨立自主。也在住宿生活中，經由師長直言提醒，以及與同學二十四小時相處，我磨去昔日固執、急躁、又不擅溝通表達的稜角，因為住在一起總是要互相包容，不可事事如自己的意，我也學會適時表達建議，並調整步伐以配合群體，也讓我體會到有時能「讓」也是一種智慧，要做到嚴以律己，寬以待人，把心力放在目標上。住宿生活需要配合團體作息，也有許多機會需要團隊合作與互相體諒。
+       <p class="mb-0">在住宿生活中，經由師長直言提醒，以及與同學二十四小時相處，我了解到住在一起總是要互相包容，不可事事如自己的意，我也學會適時表達建議，並調整步伐以配合群體。
+	   <p>也讓我體會到有時能「讓」也是一種智慧，要做到嚴以律己，寬以待人，把心力放在目標上。住宿生活需要配合團體作息，也有許多機會需要團隊合作與互相體諒。</p>
       </div>
     </section>
 
@@ -156,7 +157,10 @@
     <section class="resume-section p-3 p-lg-5 d-flex align-items-center" id="Cadre">
       <div class="w-100">
         <h2 class="mb-5"><span class="text-primary">求學時期擔任幹部</span>Cadre</h2>
-		<p class="card-text">在高中的學習階段，我一直努力求進步，不時自我反省檢討在日常生活中的言行舉止，曾擔任班長，在管理班上事務及領導班上的同學參與各式活動讓我了解當個領導者的不簡單，從其中學習到許多的為人處事的經驗，做事規劃要有前瞻性，執行要有提前量，平時就要觀察班上的狀況，察覺有一點小狀況時就盡速處理，維持班級的穩定性。並學習到了溝通的能力，因為時常要扮演同學與導師之間的良好溝通橋樑，偕同討論師生之間的觀點、想法，找到明確可行的方法。擔任班長的期間，我體認到原來在許多事情細節，讓我更加謙虛，這些寶貴經驗在以後人生路上必定受益良多。
+		<p class="card-text">在高中的學習階段，我一直努力求進步，不時自我反省檢討在日常生活中的言行舉止。
+		<p>曾擔任班長，在管理班上事務及領導班上的同學參與各式活動讓我了解當個領導者的不簡單，從其中學習到許多的為人處事的經驗，做事規劃要有前瞻性，執行要有提前量，平時就要觀察班上的狀況，察覺有一點小狀況時就盡速處理，維持班級的穩定性。</p>
+		<p>並學習到了溝通的能力，因為時常要扮演同學與導師之間的良好溝通橋樑，偕同討論師生之間的觀點、想法，找到明確可行的方法。</p>
+		<p>擔任班長的期間，我體認到原來在許多事情細節，讓我更加謙虛，這些寶貴經驗在以後人生路上必定受益良多。</p>
 		<div id="accordion">
 		  <div class="card">
 		    <div class="card-header">
