--- a/index.html
+++ b/index.html
@@ -237,7 +237,11 @@
 
 		</div>
       </div>
-      <img class="card-img-top" src="img/333.jpg" alt="">
+      <div class="col-lg-4 col-sm-6 mb-4">
+        <div class="card h-100">
+          <img class="card-img-top" src="img/333.jpg" alt="">
+	    </div>
+      </div>
     </section>
 	
     <hr class="m-0">
