--- a/index.html
+++ b/index.html
@@ -239,7 +239,9 @@
       </div>
       <div class="col-lg-4 col-sm-6 mb-4">
         <div class="card h-100">
+		<div class="card-body">
           <img class="card-img-top" src="img/333.jpg" alt="">
+		  </div>
 	    </div>
       </div>
     </section>
