--- a/index.html
+++ b/index.html
@@ -101,7 +101,8 @@
             <h3 class="mb-0">房務人員 Housekeeper </h3>
             <div class="subheading mb-3">見晴花園度假山莊 Sun Shine Vacation Villa</div>
 			<p class="card-text">這是我第一次打工，原本只是好奇房務人員的工作內容和賺點錢，但後來學到了許多的事情，包括工作應有的態度和賺錢是多麼的不容易，也讓我在上大學時懂得控制花費，養成理財的觀念。
-          </div>
+          <p>This is my first time working. I was just curious about the work of the housekeepers and Make some money. Then I learned a lot of things, including how to work in correct attitudeand and how to control cost. Also let me know how to control spending and develop financial management when I go to college.</p>
+		  </div>
           <div class="resume-date text-md-right">
             <span class="text-primary">July 2018 - August 2018</span>
           </div>
@@ -112,6 +113,7 @@
             <h3 class="mb-0">服務生 Waiter</h3>
             <div class="subheading mb-3">千葉火鍋 Chiba Sukiyaki</div>
 			<p class="card-text">利用課餘時間打工，讓自己的生活不要過於鬆懈，停滯不前。給自己的目標是要一步一步完成的，壓力帶來動力。
+			<p>Use your spare time to work, so that your life should not be too lax and stagnant. The goal for yourself is to do it step by step, and the pressure brings motivation.</p>
           </div>
           <div class="resume-date text-md-right">
             <span class="text-primary">April 2019 - </span>
