--- a/index.html
+++ b/index.html
@@ -248,7 +248,7 @@
     </div>
 	<div class="col-lg-4 col-sm-6 mb-4">
       <div class="card h-100">
-        <a href="https://www.toy-people.com/?p=28632"><img class="card-img-top" src="img/DSC_0291.jpg" alt=""></a>
+        <a href="https://www.toy-people.com/?p=28632"><img class="card-img-top" src="img/DSC_0291.JPG" alt=""></a>
         <div class="card-body">
           <h4 class="card-title">
             <a href="https://www.toy-people.com/?p=28632">我最喜歡的鋼彈模型-獨角獸鋼彈</a>
